[tool.poetry]
name = "spiracle"
version = "0.1.0"
description = "Water some plants"
authors = ["David Svenson <davidsvenson@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.5"
"rpi.gpio" = "^0.7.0"
click = "^7.1.1"
abelectronics = {git = "https://github.com/abelectronicsuk/ABElectronics_Python_Libraries.git"}
spidev = "^3.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
